@@ -7,12 +7,12 @@
 
 package com.newrelic.jfr.tometric;
 
-import static java.util.concurrent.TimeUnit.SECONDS;
-
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.metrics.Gauge;
 import com.newrelic.telemetry.metrics.Metric;
 import java.time.Duration;
+import java.time.temporal.ChronoUnit;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import jdk.jfr.consumer.RecordedEvent;
@@ -22,9 +22,9 @@ public class ContextSwitchRateMapper implements EventToMetric {
 
   @Override
   public List<? extends Metric> apply(RecordedEvent ev) {
-    var timestamp = ev.getStartTime().toEpochMilli();
-    var attr = new Attributes();
-    return List.of(
+    long timestamp = ev.getStartTime().toEpochMilli();
+    Attributes attr = new Attributes();
+    return Collections.singletonList(
         new Gauge("jfr.ThreadContextSwitchRate", ev.getDouble("switchRate"), timestamp, attr));
   }
 
@@ -35,6 +35,6 @@ public class ContextSwitchRateMapper implements EventToMetric {
 
   @Override
   public Optional<Duration> getPollingDuration() {
-    return Optional.of(Duration.of(1, SECONDS.toChronoUnit()));
+    return Optional.of(Duration.of(1, ChronoUnit.SECONDS));
   }
 }
