@@ -10,6 +10,7 @@ package com.newrelic.jfr.tometric;
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.metrics.Gauge;
 import com.newrelic.telemetry.metrics.Metric;
+import java.util.Collections;
 import java.util.List;
 import jdk.jfr.consumer.RecordedEvent;
 
@@ -18,14 +19,13 @@ public class GarbageCollectionMapper implements EventToMetric {
 
   @Override
   public List<? extends Metric> apply(RecordedEvent ev) {
-    var timestamp = ev.getStartTime().toEpochMilli();
+    long timestamp = ev.getStartTime().toEpochMilli();
     double longestPause = ev.getDouble("longestPause");
+    Attributes attr =
+        new Attributes().put("name", ev.getString("name")).put("cause", ev.getString("cause"));
 
-    var attr = new Attributes();
-    attr.put("name", ev.getString("name"));
-    attr.put("cause", ev.getString("cause"));
-
-    return List.of(new Gauge("jfr.GarbageCollection.longestPause", longestPause, timestamp, attr));
+    return Collections.singletonList(
+        new Gauge("jfr.GarbageCollection.longestPause", longestPause, timestamp, attr));
   }
 
   @Override
